--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
     <style>
       :root {
+        --brand-accent: rgba(59, 130, 246, 0.9);
         color-scheme: light dark;
         font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         background-color: #0f172a;
@@ -73,49 +74,47 @@
         letter-spacing: -0.02em;
       }
 
-      #catalog-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
+      #catalog-cards {
         display: grid;
         gap: 0.75rem;
       }
 
-      #catalog-list button {
+      .card {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 1rem 1.25rem;
         border-radius: 16px;
-        border: 1px solid transparent;
+        border: 1px solid rgba(59, 130, 246, 0.05);
         background: rgba(30, 41, 59, 0.6);
         color: inherit;
         font-size: 1rem;
         font-weight: 500;
         cursor: pointer;
+        user-select: none;
         transition: background 120ms ease, transform 120ms ease, border-color 120ms ease;
       }
 
-      #catalog-list button:hover,
-      #catalog-list button:focus-visible {
+      .card:hover,
+      .card:focus-visible {
         background: rgba(59, 130, 246, 0.16);
         border-color: rgba(96, 165, 250, 0.35);
         transform: translateY(-1px);
         outline: none;
       }
 
-      #catalog-list button[data-selected="true"] {
-        background: linear-gradient(135deg, rgba(59, 130, 246, 0.35), rgba(14, 165, 233, 0.25));
-        border-color: rgba(59, 130, 246, 0.45);
-        box-shadow: 0 18px 40px rgba(37, 99, 235, 0.2);
+      .card.active {
+        outline: 2px solid var(--brand-accent);
+        box-shadow: 0 0 0 3px color-mix(in srgb, var(--brand-accent), transparent 70%);
       }
 
-      #catalog-list button small {
-        font-size: 0.8rem;
-        color: rgba(226, 232, 240, 0.7);
+      .card span {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
       }
 
-      .badge {
+      .card .badge {
         border-radius: 999px;
         background: rgba(30, 64, 175, 0.35);
         border: 1px solid rgba(147, 197, 253, 0.2);
@@ -145,6 +144,12 @@
         align-items: center;
       }
 
+      #panel header div {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+      }
+
       #panel header h2 {
         margin: 0;
         font-size: 1.5rem;
@@ -153,6 +158,29 @@
 
       #panel header span {
         color: rgba(148, 163, 184, 0.85);
+      }
+
+      #panel-close {
+        appearance: none;
+        border: none;
+        background: rgba(30, 41, 59, 0.6);
+        color: rgba(226, 232, 240, 0.85);
+        font-size: 1.1rem;
+        border-radius: 999px;
+        width: 2rem;
+        height: 2rem;
+        cursor: pointer;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        transition: background 120ms ease, color 120ms ease;
+      }
+
+      #panel-close:hover,
+      #panel-close:focus-visible {
+        background: rgba(248, 113, 113, 0.2);
+        color: rgba(254, 226, 226, 0.95);
+        outline: none;
       }
 
       #panel .placeholder {
@@ -251,15 +279,18 @@
     <div id="app-shell">
       <section id="catalog" aria-labelledby="catalog-title">
         <h2 id="catalog-title">MiniApps disponíveis</h2>
-        <ul id="catalog-list"></ul>
+        <div id="catalog-cards" role="list"></div>
       </section>
       <section id="panel" aria-live="polite">
         <header>
-          <h2 id="panel-title">Catálogo</h2>
-          <span id="panel-subtitle">Escolha um MiniApp para abrir no painel central</span>
+          <div>
+            <h2 id="panel-title">Catálogo</h2>
+            <span id="panel-subtitle">Escolha um MiniApp para abrir no painel central</span>
+          </div>
+          <button id="panel-close" type="button" aria-label="Fechar painel" hidden>✕</button>
         </header>
         <div class="placeholder" id="panel-placeholder">
-          <p>Navegue pelo catálogo ao lado ou abra diretamente um MiniApp com a rota <strong>#/app/&lt;id&gt;</strong>.</p>
+          <p>Escolha um MiniApp ao lado para abrir seu painel aqui.</p>
         </div>
         <iframe id="miniapp-frame" title="Painel do MiniApp" hidden></iframe>
         <footer>
