Seed master credentials automatically

--- a/index.html
+++ b/index.html
@@ -273,7 +273,10 @@
   <body>
     <header>
       <h1>AppBase</h1>
-      <p>Catálogo unificado de MiniApps. Selecione um módulo para iniciar ou use um link direto para abrir um painel específico.</p>
+      <p>
+        Catálogo unificado de MiniApps. Selecione um módulo para iniciar ou use um link direto para abrir um painel específico.
+        As credenciais padrão são <strong>usuário: adm</strong> e <strong>senha: 0000</strong> (altere no primeiro acesso).
+      </p>
     </header>
     <div id="error-banner" role="alert"></div>
     <div id="app-shell">
