feat: show master status indicators during setup

--- a/index.html
+++ b/index.html
@@ -237,6 +237,49 @@
         display: block;
       }
 
+      .status-stack {
+        display: flex;
+        flex-direction: column;
+        gap: 0.35rem;
+        align-items: flex-start;
+      }
+
+      .status-pill {
+        border-radius: 999px;
+        padding: 0.25rem 0.75rem;
+        font-size: 0.78rem;
+        font-weight: 600;
+        letter-spacing: 0.02em;
+        background: rgba(30, 41, 59, 0.6);
+        border: 1px solid rgba(148, 163, 184, 0.2);
+        color: rgba(226, 232, 240, 0.85);
+        transition: background 150ms ease, border-color 150ms ease, color 150ms ease;
+      }
+
+      .status-pill[data-state='active'] {
+        background: rgba(34, 197, 94, 0.2);
+        border-color: rgba(134, 239, 172, 0.45);
+        color: rgba(187, 247, 208, 0.95);
+      }
+
+      .status-pill[data-state='warning'] {
+        background: rgba(250, 204, 21, 0.18);
+        border-color: rgba(253, 224, 71, 0.4);
+        color: rgba(254, 249, 195, 0.92);
+      }
+
+      .status-pill[data-state='locked'] {
+        background: rgba(59, 130, 246, 0.16);
+        border-color: rgba(96, 165, 250, 0.35);
+        color: rgba(191, 219, 254, 0.95);
+      }
+
+      .status-pill[data-state='error'] {
+        background: rgba(248, 113, 113, 0.2);
+        border-color: rgba(248, 113, 113, 0.45);
+        color: rgba(254, 226, 226, 0.95);
+      }
+
       @media (max-width: 1024px) {
         #app-shell {
           grid-template-columns: 1fr;
@@ -297,7 +340,10 @@
         </div>
         <iframe id="miniapp-frame" title="Painel do MiniApp" hidden></iframe>
         <footer>
-          <span>AppBase · publicação estática</span>
+          <div class="status-stack">
+            <span class="status-pill" id="status-db" data-state="idle">Banco de dados: verificando…</span>
+            <span class="status-pill" id="status-user" data-state="idle">Usuário: verificando…</span>
+          </div>
           <a href="./miniapps/registry.json" target="_blank" rel="noopener">Ver registry</a>
         </footer>
       </section>
