Add reset app button to clear stored data

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -14,6 +14,13 @@
           <span class="ac-appbar__title">Marco Console</span>
         </div>
         <div class="ac-appbar__actions">
+          <button
+            type="button"
+            class="ac-btn ac-btn--danger js-reset-app"
+            aria-label="Redefinir aplicativo e limpar dados salvos"
+          >
+            Resetar aplicativo
+          </button>
           <button type="button" class="ac-btn ac-btn--ghost js-open-login">
             Entrar
           </button>
