--- a/index.html
+++ b/index.html
@@ -38,16 +38,12 @@
       }
 
       header {
-        padding: 2.25rem 1.5rem 1.25rem;
+        padding: 2.5rem 3rem 1.5rem;
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
         gap: 1.5rem;
-      }
-
-      .header-top {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
+        align-items: flex-end;
+        justify-content: space-between;
       }
 
       header h1 {
@@ -60,80 +56,94 @@
       header p {
         margin: 0;
         color: rgba(226, 232, 240, 0.8);
-        max-width: 70ch;
-      }
-
-      .header-controls {
-        display: flex;
-        flex-direction: column;
-        gap: 0.75rem;
-        max-width: min(100%, 420px);
-        background: linear-gradient(160deg, rgba(15, 23, 42, 0.75), rgba(15, 23, 42, 0.5));
-        border: 1px solid rgba(148, 163, 184, 0.15);
-        border-radius: 16px;
-        padding: 1rem 1.25rem;
-        box-shadow: 0 20px 60px rgba(15, 23, 42, 0.3);
-      }
-
-      .header-controls label {
-        font-size: 0.85rem;
-        text-transform: uppercase;
-        letter-spacing: 0.08em;
-        font-weight: 600;
-        color: rgba(191, 219, 254, 0.8);
-      }
-
-      #app-selector {
-        appearance: none;
-        width: 100%;
-        border-radius: 12px;
-        border: 1px solid rgba(96, 165, 250, 0.3);
-        background: rgba(30, 41, 59, 0.7);
-        color: rgba(248, 250, 252, 0.95);
-        padding: 0.75rem 1rem;
-        font-size: 1rem;
-        font-family: inherit;
-        font-weight: 500;
-        transition: border-color 120ms ease, box-shadow 120ms ease;
-      }
-
-      #app-selector:focus-visible {
-        outline: none;
-        border-color: rgba(59, 130, 246, 0.9);
-        box-shadow: 0 0 0 3px color-mix(in srgb, var(--brand-accent), transparent 65%);
-      }
-
-      #app-selector:disabled {
-        opacity: 0.6;
-        cursor: not-allowed;
-      }
-
-      #factoryReset {
-        align-self: flex-start;
-        border: 1px solid rgba(248, 113, 113, 0.4);
-        border-radius: 999px;
-        background: rgba(248, 113, 113, 0.18);
-        color: rgba(254, 226, 226, 0.92);
-        font-size: 0.85rem;
-        font-weight: 600;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        transition: background 120ms ease, border-color 120ms ease, color 120ms ease;
-      }
-
-      #factoryReset:hover,
-      #factoryReset:focus-visible {
-        background: rgba(248, 113, 113, 0.28);
-        border-color: rgba(248, 113, 113, 0.6);
-        outline: none;
+        max-width: 60ch;
       }
 
       #app-shell {
         flex: 1;
+        display: grid;
+        grid-template-columns: minmax(280px, 360px) 1fr;
+        gap: 2rem;
+        padding: 0 3rem 3rem;
+      }
+
+      #catalog {
+        backdrop-filter: blur(18px);
+        background: linear-gradient(160deg, rgba(15, 23, 42, 0.86), rgba(15, 23, 42, 0.65));
+        border: 1px solid rgba(148, 163, 184, 0.1);
+        border-radius: 20px;
+        padding: 1.75rem;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
-        padding: 0 1.5rem 2.5rem;
+        box-shadow: 0 30px 80px rgba(15, 23, 42, 0.35);
+      }
+
+      #catalog h2 {
+        margin: 0;
+        font-size: 1.3rem;
+        letter-spacing: -0.02em;
+      }
+
+      #catalog-cards {
+        display: grid;
+        gap: 0.75rem;
+      }
+
+      #catalog-cards[data-loading='true'] {
+        opacity: 0.6;
+        pointer-events: none;
+      }
+
+      #catalog-cards[data-locked='true'] {
+        opacity: 0.4;
+        pointer-events: none;
+      }
+
+      .card {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 1.25rem;
+        border-radius: 16px;
+        border: 1px solid rgba(59, 130, 246, 0.05);
+        background: rgba(30, 41, 59, 0.6);
+        color: inherit;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        user-select: none;
+        transition: background 120ms ease, transform 120ms ease, border-color 120ms ease;
+      }
+
+      .card:hover,
+      .card:focus-visible {
+        background: rgba(59, 130, 246, 0.16);
+        border-color: rgba(96, 165, 250, 0.35);
+        transform: translateY(-1px);
+        outline: none;
+      }
+
+      .card.active {
+        outline: 2px solid var(--brand-accent);
+        box-shadow: 0 0 0 3px color-mix(in srgb, var(--brand-accent), transparent 70%);
+      }
+
+      .card span {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
+
+      .card .badge {
+        border-radius: 999px;
+        background: rgba(30, 64, 175, 0.35);
+        border: 1px solid rgba(147, 197, 253, 0.2);
+        padding: 0.125rem 0.5rem;
+        font-size: 0.75rem;
+        font-weight: 600;
+        letter-spacing: 0.02em;
+        text-transform: uppercase;
       }
 
       #panel {
@@ -148,7 +158,7 @@
       }
 
       #panel header {
-        padding: 1.5rem 1.5rem 1rem;
+        padding: 1.5rem 2rem 1rem;
         border-bottom: 1px solid rgba(148, 163, 184, 0.12);
         display: flex;
         justify-content: space-between;
@@ -214,7 +224,7 @@
       }
 
       #panel footer {
-        padding: 1rem 1.5rem;
+        padding: 1rem 2rem;
         border-top: 1px solid rgba(148, 163, 184, 0.12);
         font-size: 0.85rem;
         color: rgba(148, 163, 184, 0.75);
@@ -222,6 +232,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 1rem;
+        flex-wrap: wrap;
       }
 
       #panel footer a {
@@ -235,7 +246,7 @@
       }
 
       #error-banner {
-        margin: 0 1.5rem 1.5rem;
+        margin: 0 3rem 1.5rem;
         background: rgba(248, 113, 113, 0.18);
         border: 1px solid rgba(248, 113, 113, 0.35);
         color: rgba(254, 226, 226, 0.9);
@@ -244,7 +255,7 @@
         display: none;
       }
 
-      #error-banner[data-visible="true"] {
+      #error-banner[data-visible='true'] {
         display: block;
       }
 
@@ -291,35 +302,64 @@
         color: rgba(254, 226, 226, 0.95);
       }
 
-      @media (min-width: 768px) {
+      .footer-actions {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+      }
+
+      #factoryReset {
+        border: 1px solid rgba(248, 113, 113, 0.4);
+        border-radius: 999px;
+        background: rgba(248, 113, 113, 0.18);
+        color: rgba(254, 226, 226, 0.92);
+        font-size: 0.8rem;
+        font-weight: 600;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        transition: background 120ms ease, border-color 120ms ease, color 120ms ease;
+      }
+
+      #factoryReset:hover,
+      #factoryReset:focus-visible {
+        background: rgba(248, 113, 113, 0.28);
+        border-color: rgba(248, 113, 113, 0.6);
+        outline: none;
+      }
+
+      @media (max-width: 1024px) {
+        #app-shell {
+          grid-template-columns: 1fr;
+        }
+
+        #catalog {
+          order: 2;
+        }
+      }
+
+      @media (max-width: 720px) {
         header {
-          padding: 2.75rem 3rem 1.5rem;
-          flex-direction: row;
-          justify-content: space-between;
-          align-items: flex-end;
-        }
-
-        .header-top {
-          max-width: 60ch;
-        }
-
-        .header-controls {
-          padding: 1.25rem 1.5rem;
+          padding: 2rem 1.5rem 1rem;
+          gap: 1rem;
         }
 
         #app-shell {
-          padding: 0 3rem 3rem;
-          gap: 2rem;
+          padding: 0 1.5rem 2rem;
+          gap: 1.25rem;
+        }
+
+        #catalog {
+          padding: 1.25rem;
         }
 
         #panel header,
         #panel footer {
-          padding-left: 2rem;
-          padding-right: 2rem;
+          padding-left: 1.5rem;
+          padding-right: 1.5rem;
         }
 
         #error-banner {
-          margin: 0 3rem 1.5rem;
+          margin: 0 1.5rem 1.5rem;
         }
       }
     </style>
@@ -327,23 +367,20 @@
   </head>
   <body>
     <header>
-      <div class="header-top">
+      <div>
         <h1>AppBase</h1>
         <p>
           Catálogo unificado de MiniApps. Selecione um módulo para iniciar ou use um link direto para abrir um painel específico.
           As credenciais padrão são <strong>usuário: adm</strong> e <strong>senha: 0000</strong> (altere no primeiro acesso).
         </p>
       </div>
-      <div class="header-controls">
-        <label for="app-selector">MiniApp ativo</label>
-        <select id="app-selector" name="app-selector" aria-label="Selecionar MiniApp">
-          <option value="">Selecione um MiniApp</option>
-        </select>
-        <button id="factoryReset" hidden>Limpar plataforma</button>
-      </div>
     </header>
     <div id="error-banner" role="alert"></div>
     <div id="app-shell">
+      <section id="catalog" aria-labelledby="catalog-title">
+        <h2 id="catalog-title">MiniApps disponíveis</h2>
+        <div id="catalog-cards" role="list" aria-live="polite"></div>
+      </section>
       <section id="panel" aria-live="polite">
         <header>
           <div>
@@ -353,7 +390,7 @@
           <button id="panel-close" type="button" aria-label="Fechar painel" hidden>✕</button>
         </header>
         <div class="placeholder" id="panel-placeholder">
-          <p>Selecione um MiniApp acima para abrir seu painel aqui.</p>
+          <p>Escolha um MiniApp ao lado para abrir seu painel aqui.</p>
         </div>
         <iframe id="miniapp-frame" title="Painel do MiniApp" hidden></iframe>
         <footer>
@@ -361,7 +398,10 @@
             <span class="status-pill" id="status-db" data-state="idle">Banco de dados: verificando…</span>
             <span class="status-pill" id="status-user" data-state="idle">Usuário: verificando…</span>
           </div>
-          <a href="./miniapps/registry.json" target="_blank" rel="noopener">Ver registry</a>
+          <div class="footer-actions">
+            <button id="factoryReset" hidden>Limpar plataforma</button>
+            <a href="./miniapps/registry.json" target="_blank" rel="noopener">Ver registry</a>
+          </div>
         </footer>
       </section>
     </div>
@@ -393,8 +433,8 @@
     </script>
     <script>
       (function () {
-        const derivedBase = window.__APP_BASE_PATH__
-          || (() => {
+        const derivedBase =
+          window.__APP_BASE_PATH__ || (() => {
             const baseHref = (document.querySelector('base') || {}).href;
             if (baseHref) {
               const url = new URL(baseHref);
