--- a/index.html
+++ b/index.html
@@ -38,12 +38,18 @@
       }
 
       header {
+        position: sticky;
+        top: 0;
+        z-index: 100;
         padding: 2.5rem 3rem 1.5rem;
         display: flex;
         flex-wrap: wrap;
         gap: 1.5rem;
         align-items: flex-end;
         justify-content: space-between;
+        background: linear-gradient(160deg, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.75));
+        backdrop-filter: blur(14px);
+        border-bottom: 1px solid rgba(148, 163, 184, 0.12);
       }
 
       header h1 {
@@ -57,6 +63,35 @@
         margin: 0;
         color: rgba(226, 232, 240, 0.8);
         max-width: 60ch;
+      }
+
+      .header-actions {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      .header-link {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.75rem 1.25rem;
+        border-radius: 999px;
+        border: 1px solid rgba(96, 165, 250, 0.45);
+        background: rgba(59, 130, 246, 0.2);
+        color: rgba(240, 249, 255, 0.95);
+        text-decoration: none;
+        font-weight: 600;
+        letter-spacing: 0.01em;
+        transition: background 150ms ease, border-color 150ms ease, transform 150ms ease;
+      }
+
+      .header-link:hover,
+      .header-link:focus-visible {
+        background: rgba(96, 165, 250, 0.3);
+        border-color: rgba(125, 211, 252, 0.7);
+        transform: translateY(-1px);
+        outline: none;
       }
 
       #app-shell {
@@ -343,6 +378,11 @@
           gap: 1rem;
         }
 
+        .header-actions {
+          width: 100%;
+          justify-content: flex-start;
+        }
+
         #app-shell {
           padding: 0 1.5rem 2rem;
           gap: 1.25rem;
@@ -374,6 +414,15 @@
           As credenciais padrão são <strong>usuário: adm</strong> e <strong>senha: 0000</strong> (altere no primeiro acesso).
         </p>
       </div>
+      <nav class="header-actions" aria-label="Acesso rápido">
+        <a
+          class="header-link"
+          href="#/app/user-panel"
+          aria-label="Abrir o MiniApp Painel do Usuário para fazer login, logoff, trocar senha, excluir conta ou encerrar sessão"
+        >
+          Abrir Painel do Usuário
+        </a>
+      </nav>
     </header>
     <div id="error-banner" role="alert"></div>
     <div id="app-shell">
