fix: load app module from docs fallback

--- a/index.html
+++ b/index.html
@@ -470,19 +470,26 @@
       };
 
       const loadAppModule = async () => {
-        try {
-          await import('./app/main.js');
-          return;
-        } catch (primaryError) {
-          console.warn('Falha ao carregar ./app/main.js. Tentando fallback ./dist/app/main.js.', primaryError);
+        const candidateModules = ['./app/main.js', './dist/app/main.js', './docs/app/main.js'];
+        const errors = [];
+
+        for (const modulePath of candidateModules) {
+          try {
+            await import(modulePath);
+            if (errors.length > 0) {
+              console.info('AppBase inicializado a partir do fallback %s.', modulePath, errors);
+            }
+            return;
+          } catch (error) {
+            errors.push({ modulePath, error });
+            console.warn(`Falha ao carregar ${modulePath}.`, error);
+          }
         }
 
-        try {
-          await import('./dist/app/main.js');
-        } catch (fallbackError) {
-          console.error('Falha ao carregar módulo principal do AppBase.', fallbackError);
-          renderBootError('Não foi possível inicializar o AppBase. Execute "npm run build" e recarregue a página.');
-        }
+        console.error('Falha ao carregar módulo principal do AppBase.', errors);
+        renderBootError(
+          'Não foi possível inicializar o AppBase. Execute "npm run build" ou publique novamente e recarregue a página.'
+        );
       };
 
       void loadAppModule();
