--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <script type="importmap">
       {
         "imports": {
-          "idb": "./node_modules/idb/build/index.js"
+          "idb": "./vendor/idb/index.js"
         }
       }
     </script>
