--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -69,7 +69,9 @@
             </div>
             <div class="stage-host" data-stage-host aria-live="polite" aria-busy="false"></div>
             <div class="cta-group">
-              <a class="cta" href="./auth/login.html" data-i18n="panel.actions.login">Acessar</a>
+              <button class="cta" type="button" data-action="open-login" data-i18n="panel.actions.login">
+                Acessar
+              </button>
               <a
                 class="cta secondary"
                 href="./auth/register.html"
