Enable inline register panel activation

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -72,14 +72,15 @@
               <button class="cta" type="button" data-action="open-login" data-i18n="panel.actions.login">
                 Acessar
               </button>
-              <a
+              <button
                 class="cta secondary"
-                href="./auth/register.html"
+                type="button"
+                data-action="open-register"
                 data-register-guard
                 data-i18n="panel.actions.register"
               >
                 Criar conta
-              </a>
+              </button>
             </div>
           </section>
         </main>
