Add login shortcut link to registration panel

--- a/miniapps/base_shell/auth/register.html
+++ b/miniapps/base_shell/auth/register.html
@@ -163,6 +163,16 @@
               </label>
             </div>
             <button type="submit" class="cta" data-i18n="auth.register.submit">Registrar</button>
+            <div class="auth-register__login-link">
+              <a
+                href="./login.html"
+                class="auth-register__login-link-anchor"
+                data-action="open-login"
+                data-i18n="auth.register.haveAccount"
+              >
+                Já tenho uma conta
+              </a>
+            </div>
             <p id="register-feedback" class="feedback" role="status" aria-live="polite"></p>
           </form>
           <footer class="auth-login__card-footer" aria-label="5Horas">
