--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -68,6 +68,7 @@
               </p>
             </div>
             <div class="stage-host" data-stage-host aria-live="polite" aria-busy="false"></div>
+            <p class="feedback" role="status" aria-live="polite"></p>
             <div class="cta-group">
               <button class="cta" type="button" data-action="open-login" data-i18n="panel.actions.login">
                 Acessar
