--- a/miniapps/base_shell/auth/login.html
+++ b/miniapps/base_shell/auth/login.html
@@ -56,8 +56,8 @@
           <form id="login-form" class="auth-login__form" novalidate>
             <h1 id="page-title" data-i18n="auth.login.title">Acessar conta</h1>
             <div class="field">
-              <label for="login-email" data-i18n="auth.form.email">E-mail</label>
-              <input id="login-email" name="email" type="email" required autocomplete="email" />
+              <label for="login-email" data-i18n="auth.form.loginIdentifier">E-mail ou celular</label>
+              <input id="login-email" name="email" type="text" required autocomplete="username" />
             </div>
             <div class="field auth-login__field-password">
               <label for="login-password" data-i18n="auth.form.password">Senha</label>
@@ -101,6 +101,19 @@
             </div>
             <button type="submit" class="cta" data-i18n="auth.login.submit">Entrar</button>
             <p id="login-feedback" class="feedback" role="status" aria-live="polite"></p>
+            <div class="auth-login__links">
+              <div class="auth-login__link-group" data-register-guard>
+                <span data-i18n="auth.login.noAccount">Novo por aqui?</span>
+                <a
+                  class="auth-login__link"
+                  href="./register.html"
+                  data-action="open-register"
+                  data-i18n="auth.login.createAccount"
+                >
+                  Criar conta
+                </a>
+              </div>
+            </div>
           </form>
           <footer class="auth-login__card-footer" aria-label="5Horas">
             <img
