Finalize mobile theme refactor and fix login flow

--- a/index.html
+++ b/index.html
@@ -5,54 +5,7 @@
     <title>Projeto Marco</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="refresh" content="0; url=./miniapps/base_shell/" />
-    <style>
-      :root {
-        color-scheme: light dark;
-      }
-
-      html,
-      body {
-        height: 100%;
-      }
-
-      body {
-        margin: 0;
-        display: grid;
-        place-items: center;
-        padding: clamp(2rem, 6vw, 4rem) clamp(1rem, 4vw, 2.5rem);
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-        background: #f8fafc;
-        color: #0f172a;
-      }
-
-      main {
-        display: grid;
-        gap: 1.5rem;
-        text-align: center;
-        max-width: 420px;
-      }
-
-      h1 {
-        margin: 0;
-        font-size: clamp(1.75rem, 4vw, 2.5rem);
-      }
-
-      p {
-        margin: 0;
-        line-height: 1.6;
-      }
-
-      a {
-        color: #2563eb;
-        font-weight: 600;
-        text-decoration: none;
-      }
-
-      a:hover,
-      a:focus {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <main>
