--- a/miniapps/base_shell/auth/register.html
+++ b/miniapps/base_shell/auth/register.html
@@ -31,7 +31,6 @@
       })();
     </script>
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="../../../packages/base.theme/theme.css" />
   </head>
   <body class="auth-login auth-register">
     <main id="panel" class="panel panel--auth" role="main" tabindex="-1">
@@ -136,7 +135,7 @@
             </div>
             <div class="field auth-login__field-actions">
               <label class="auth-login__remember auth-register__terms" for="register-terms">
-                <input id="register-terms" name="terms" type="checkbox" required />
+                <input id="register-terms" name="terms" type="checkbox" required checked />
                 <span>
                   <span data-i18n="auth.register.terms.prefix">Li e aceito os</span>
                   <a
