--- a/miniapps/base_shell/auth/profile.html
+++ b/miniapps/base_shell/auth/profile.html
@@ -57,8 +57,14 @@
               aria-expanded="false"
               aria-controls="user-menu"
             >
-              <span class="user-avatar" aria-hidden="true">☰</span>
-              <span id="current-user" class="sr-only">--</span>
+              <span class="user-avatar" aria-hidden="true">👤</span>
+              <span
+                id="current-user"
+                class="sr-only"
+                data-i18n="actions.openUserMenu"
+              >
+                Abrir menu do usuário
+              </span>
             </button>
           </div>
         </div>
