Refine login footer branding and layout

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -97,7 +97,10 @@
       <footer id="app-footer" class="app-footer" role="contentinfo">
         <div class="footer-content">
           <small class="footer-copy">
-            &copy; <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
+            <span class="footer-copy__text">
+              &copy;
+              <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
+            </span>
           </small>
           <small class="footer-revision">
             <span data-revision data-i18n="footer.revisionFallback">
