--- a/miniapps/base_shell/auth/profile.html
+++ b/miniapps/base_shell/auth/profile.html
@@ -298,7 +298,10 @@
       <footer class="app-footer" role="contentinfo">
         <div class="footer-content">
           <small class="footer-copy">
-            &copy; <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
+            <span class="footer-copy__text">
+              &copy;
+              <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
+            </span>
           </small>
           <small class="footer-revision">
             <span data-revision data-i18n="footer.revisionFallback">
