Add system and user miniapp entries to user menu

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -161,6 +161,13 @@
             </button>
           </li>
           <li>
+            <button id="btnSystemPanel" class="menu-item" type="button">
+              <span class="menu-icon" aria-hidden="true">🖥️</span>
+              <span class="menu-text" data-i18n="settings.systemPanel">Painel do sistema</span>
+              <span class="sr-only" data-i18n="actions.openSystemPanel">Abrir painel do sistema</span>
+            </button>
+          </li>
+          <li>
             <button id="btnUserPanel" class="menu-item" type="button">
               <span class="menu-icon" aria-hidden="true">👤</span>
               <span class="menu-text" data-i18n="settings.userPanel">Painel do usuário</span>
